[gd_scene load_steps=4 format=3 uid="uid://cw6omnltevjl7"]

[ext_resource type="Script" path="res://Player/Weapons/Sniper.gd" id="1_y4ypb"]
[ext_resource type="Texture2D" uid="uid://sw3knqg1x4to" path="res://Textures/test/sniper.png" id="2_6pwyi"]

[sub_resource type="CircleShape2D" id="CircleShape2D_p0ini"]
radius = 212.009

[node name="Sniper" type="Node2D"]
script = ExtResource("1_y4ypb")

[node name="SniperAttackTimer" type="Timer" parent="."]

[node name="SniperChargingTimer" type="Timer" parent="."]

[node name="GunSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_6pwyi")

[node name="DetectArea" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectArea"]
shape = SubResource("CircleShape2D_p0ini")

[connection signal="shoot" from="." to="." method="_on_shoot"]
[connection signal="timeout" from="SniperAttackTimer" to="." method="_on_sniper_attack_timer_timeout"]
